--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,14 @@
 language: go
+
+go:
+  - 1.14.x
+  - tip
+
+before_install:
+  - go get -t -v ./...
+
+script:
+  - go test -v -coverprofile=coverage.out -covermode=atomic ./...
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
