--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "frontend"]
 	path = frontend
-	url = git@github.com:dryairship/IITKBucks-frontend.git
+	url = https://github.com/dryairship/IITKBucks-frontend.git
