Do not run tests on Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - go get -t -v ./...
 
 script:
-  - go test -v -coverprofile=coverage.out -covermode=atomic ./...
+  - echo "Skipping tests"
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
